aux_source_directory(./TestF0 Test1)
add_executable(_TestF0 ${Test1})
target_link_libraries(_TestF0 CVESVP)
target_link_libraries(_TestF0 CVEDSP2)
target_link_libraries(_TestF0 RFNL)
target_link_libraries(_TestF0 m)

aux_source_directory(./TestSTFT Test2)
add_executable(_TestSTFT ${Test2})
target_link_libraries(_TestSTFT CVESVP)
target_link_libraries(_TestSTFT CVEDSP2)
target_link_libraries(_TestSTFT RFNL)
target_link_libraries(_TestSTFT m)

aux_source_directory(./TestPSOLA Test3)
add_executable(_TestPSOLA ${Test3})
target_link_libraries(_TestPSOLA CVESVP)
target_link_libraries(_TestPSOLA CVEDSP2)
target_link_libraries(_TestPSOLA RFNL)
target_link_libraries(_TestPSOLA m)

aux_source_directory(./TestSMS Test4)
add_executable(_TestSMS ${Test4})
target_link_libraries(_TestSMS CVESVP)
target_link_libraries(_TestSMS CVEDSP2)
target_link_libraries(_TestSMS RFNL)
target_link_libraries(_TestSMS m)

add_test(TestF0 _TestF0)
add_test(TestSTFT _TestSTFT)
add_test(TestPSOLA _TestPSOLA)

get_filename_component(TestDir "." ABSOLUTE)
get_filename_component(TopDir ${CMAKE_SOURCE_DIR} ABSOLUTE)
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -I${TopDir}/src")

